# Agents_in_a_dungeon

./: .env.example  .gitignore  README.md  SPEC.md  mock_run.py  pyproject.toml  requirements.txt  run_simulation.py
.claude/: launch.json
dungeon/: agent.py  causal.py  game.py  recommendations.py  schemas.py  tools.py  tracing.py  world.py
runs/: 1d4c1249.json  26091802.json  4113cf58.json  e7271930.json  sample01.json
server/: app.py  routes.py
static/: index.html  run.html
static/css/: style.css
static/js/: api.js  grid.js  langfuse_trace.js  replay.js  timeline.js
