[project]
name = "dungeon-agents"
version = "0.1.0"
description = "Two AI agents explore a dungeon — with structured tracing and a legibility layer"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "pydantic>=2.0",
    "langfuse>=2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
]
